[package]
name = "rating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"
libc = "0.2.144"
serde = "1.0.163"
serde_derive = "1.0.163"
serialport = "4.2.1"
toml = "0.7.4"

[features]
ctest = []
